Modernize the json package for Java 17
Convert JSONReference and JSONDeserializer.ObjectInstantiation to records,
use pattern matching for instanceof throughout, replace anonymous
Comparator and Runnable classes with lambdas and method references,
convert the escape-sequence and field-type switches to arrow form, and
replace the boxed X.TYPE constants with x.class literals.